# microcontroller

./: CMakeLists.txt  README.md  fibonacci.S  fibonacci_gen.S  note.S
Fibonacci/: CMakeLists.txt  fibonacci.S  fibonacci.c  fibonacci_gen.S  fibonacci_gen.c  fibonacci_gen.h
common/: sdk_inlines.c
hello_7segment/: CMakeLists.txt  hello_7segment.S  hello_7segment.c
